@@ -28,7 +28,7 @@ ERROR_SCRIPT_NOT_DEFINED=Script language is not defined
 ERROR_UNSUPPORTED_SCRIPT=Unsupported script language (currently suported script types are text/java, text/javascript and text/pythonscript)
 ERROR_UNSUPPORTED_DATA_TYPE=Data type is not supported (currently supported types are ExternalReference, Schema and basic types:BOOLEAN, STRING, INTEGER, FLOAT, DATETIME, as well as their type declaration versions)
 
-ERROR_MANUAL_START_OR_FINISH_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER='MANUAL' start or finish mode defined for a 'Tool' activity with 'System' type participant performer
+ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER='MANUAL' start mode defined for a 'Tool' activity with 'System' type participant performer
 ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY=System participant performer defined for Manual ('No implementation') activity
 
 WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Tool agent class attribute is not defined
