@@ -29,7 +29,7 @@ public final class SharkValidationErrorIds {
 
    public static final String ERROR_UNSUPPORTED_DATA_TYPE = "ERROR_UNSUPPORTED_DATA_TYPE";
 
-   public static final String ERROR_MANUAL_START_OR_FINISH_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER = "ERROR_MANUAL_START_OR_FINISH_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER";
+   public static final String ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER = "ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER";
 
    public static final String ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY = "ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY";
 
