@@ -1,4 +1,7 @@
 ###### TWE 5.2-1 RELEASED ######
+2015-09-03 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: Again allowing Tool activities with System participant performer to have MANUAL finish mode (to support Quartz tool agent and similar tool agents)
+
 2015-08-25 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: Improvement: increased dimensions of table for displaying DataFields, FormalParameters, XPDLStrings and I18NVariables
 
